--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.14.4",
+    "jose": "^5.9.6",
     "lamejs": "^1.2.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.2",
